# auto_upload_demo_111

./: .gitignore  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: publish.yml  pythonpublish.yml
src/auto_upload_demo_111/: __init__.py
tests/: test_auto_upload.py
