[metadata]
name = auto-upload-demo-111
version = file:VERSION
description = A simple example project
long_description = file: README.md
long_description_content_type = text/markdown
author = Paul Ganssle
author_email = paul@ganssle.io
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=2
package_dir =
    =src

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
